@@ -222,12 +222,28 @@ class PluginsModelPlugin extends JModelAdmin
 				return false;
 			}
 		}
-
+		
 		// Load the core and/or local language file(s).
 			$lang->load('plg_'.$folder.'_'.$element, JPATH_ADMINISTRATOR, null, false, false)
 		||	$lang->load('plg_'.$folder.'_'.$element, JPATH_PLUGINS.'/'.$folder.'/'.$element, null, false, false)
 		||	$lang->load('plg_'.$folder.'_'.$element, JPATH_ADMINISTRATOR, $lang->getDefault(), false, false)
 		||	$lang->load('plg_'.$folder.'_'.$element, JPATH_PLUGINS.'/'.$folder.'/'.$element, $lang->getDefault(), false, false);
+		
+		// Load the core and/or local language sys file(s) for the ordering field.
+		$db = JFactory::getDbo();
+		$query = 'SELECT element' .
+				' FROM #__extensions' .
+				' WHERE (type =' .$db->Quote('plugin'). 'AND folder='. $db->Quote($folder) . ')';
+		$db->setQuery($query);
+		$elements = $db->loadResultArray();
+		
+		foreach ($elements as $element)
+		{
+				$lang->load('plg_'.$folder.'_'.$element.'.sys', JPATH_ADMINISTRATOR, null, false, false)
+			||	$lang->load('plg_'.$folder.'_'.$element.'.sys', JPATH_PLUGINS.'/'.$folder.'/'.$element, null, false, false)
+			||	$lang->load('plg_'.$folder.'_'.$element.'.sys', JPATH_ADMINISTRATOR, $lang->getDefault(), false, false)
+			||	$lang->load('plg_'.$folder.'_'.$element.'.sys', JPATH_PLUGINS.'/'.$folder.'/'.$element, $lang->getDefault(), false, false);
+		}
 
 		if (file_exists($formFile)) {
 			// Get the plugin form.
